# signal-kit.rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PYTHON_BINDINGS_EXPANSION.md  README.md  build.rs  caf-plan.md  pyproject.toml  rustfmt.toml
benches/: farrow.rs  vector_simd.rs
python/signal_kit/: __init__.py
scripts/: README.md  build_and_test_python_release.sh  build_and_test_release.sh  setup_python_env.sh
src/: awgn.rs  caf.rs  carrier.rs  channel.rs  complex_vec.rs  cw.rs  example.rs  fft.rs  fft_interpolator.rs  fsk_carrier.rs  impairment.rs  lib.rs  main.rs  mod_type.rs  plot.rs  psk_carrier.rs  python_bindings.rs  random_bit_generator.rs  rrc_filter.rs  symbol_mapper.rs  symbol_maps.rs  vector_ops.rs  vector_simd.rs  welch.rs  window.rs
src/filter/: butterworth.rs  cosine.rs  farrow.rs  fft_interpolator.rs  mod.rs  rrc_filter.rs
src/generate/: carrier.rs  channel.rs  cw.rs  fsk_carrier.rs  impairment.rs  mod.rs  psk_carrier.rs  random_bit_generator.rs
src/spectrum/: mod.rs  welch.rs  window.rs
src/test_utils/: mod.rs
tests/python/: conftest.py  test_carrier.py  test_channel_impairments.py  test_farrow.py  test_welch.py
